# BioMetaGenie

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
input/: SRA_list.txt
service/: __init__.py  ncbi_sra_downloader.py  pm_batch_analyzer.py  trim_galore_trimmer.py  utility.py
